# highp-mmorpg

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  highp-mmorpg.sln.DotSettings  highp-mmorpg.slnx  package-lock.json  package.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.omx/plans/: resource-fix-plan-2026-04-06.md  resource-lifetime-analysis-2026-04-06.md  resource-lifetime-audit-2026-04-06.md  resource-lifetime-study-guide-2026-04-06.md
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_AND_TEST.md  CLIENT_METRICS.md  CODE_STYLE.md  CONFIGURATION.md  DIAGRAMS.md  DISCONNECT_CLEANUP_DESIGN.md  ERROR_HANDLING.md  EchoServer_Sequence_diagram.md  GLOSSARY.md  INDEX.md  IOCP_EXECUTION_FLOWS.md  IOCP_EchoServer_Architecture.md  LOAD_TEST_REPRODUCIBILITY.md  LOAD_TEST_SCENARIOS_AND_PLAN.md  NETWORK_LAYER.md  PERFORMANCE_MEASUREMENT_PLAN.md  PERFORMANCE_TEST_SCENARIOS.md  PROTOCOL.md  QUICK_START.md  SERVER_METRICS.md  SERVER_METRICS_ARCHITECTURE.md  SHARED_PTR_PASSING_GUIDE.md  SMART_POINTER_OWNERSHIP_KO.md  SOCKET_OPTIONS_GUIDE.md  UTILITIES.md  WINSOCK_IOCP_ERROR_HANDLING_GUIDE.md
echo-client/: EchoClient.h  echo-client.vcxproj  echo-client.vcxproj.filters
echo/echo-client/: EchoClient.cpp  EchoClient.h  echo-client.vcxproj  echo-client.vcxproj.filters  main.cpp
echo/echo-server/: Client.cpp  Client.h  Config.h  ConfigEmbedded.h  Const.h  EIoType.h  EchoServer.cpp  EchoServer.h  IoContext.h  config.compile.toml  config.runtime.toml  echo-server.vcxproj  echo-server.vcxproj.filters  main.cpp
exec/: AGENTS.md
exec/benchmark/: pool_benchmark.cpp
exec/chat/: AGENTS.md
exec/chat/chat-client/: AGENTS.md  ChatCli.cpp  ChatCli.h  Client.cpp  Client.h  PacketReceiver.cpp  PacketReceiver.h  PacketSender.cpp  PacketSender.h  PromptAwareTextLogger.cpp  PromptAwareTextLogger.h  chat-client.cpp  chat-client.vcxproj  chat-client.vcxproj.filters  main.cpp
exec/chat/chat-load-client/: ClientSession.cpp  ClientSession.h  IScenario.cpp  IScenario.h  PrefixedLogger.h  ResultCollector.cpp  ResultCollector.h  ScenarioConfig.cpp  ScenarioConfig.h  chat-load-client.vcxproj  chat-load-client.vcxproj.filters  main.cpp
exec/chat/chat-load-client-v2/: go.mod  main.go
exec/echo/: AGENTS.md
exec/echo/echo-client/: AGENTS.md  EchoClient.cpp  EchoClient.h  echo-client.vcxproj  echo-client.vcxproj.filters  main.cpp
exec/echo/echo-server/: AGENTS.md  EchoServer.cpp  EchoServer.h  Server.cpp  Server.h  config.runtime.toml  echo-server.vcxproj  echo-server.vcxproj.filters  main.cpp
exec/playground/: AGENTS.md  playground.cpp  playground.vcxproj  playground.vcxproj.filters
lib/: AGENTS.md  ConfigParser.h  ELoggerVerbosity.h  Errors.hpp  HybridObjectPool.hpp  IConfig.h  ILogger.h  IocpError.h  LockObjectPool.hpp  Logger.hpp  LoggerOptions.h  NetworkError.h  ObjectPool.hpp  Result.hpp  SocketError.h  TextLogger.cpp  TextLogger.h  cpp.hint  framework.h  lib.cpp  lib.vcxproj  lib.vcxproj.filters  macro.h  pch.h
lib/compileTime/: Config.h  Config.hpp  StringUtils.h  StringUtils.hpp  TomlEntry.h  TomlEntry.hpp  TomlParser.h  TomlParser.hpp
lib/inc/: AGENTS.md
lib/inc/buffer/: buffer.h
lib/inc/concurrency/: AGENTS.md  MPSCCommandQueue.hpp
lib/inc/config/: AGENTS.md
lib/inc/error/: AGENTS.md  Errors.hpp  NetworkError.h  PacketError.h
lib/inc/functional/: AGENTS.md  Result.hpp
lib/inc/logger/: AGENTS.md  ConsoleLogger.h  ELoggerVerbosity.h  ILogger.h  Logger.hpp  LoggerOptions.h  TextLogger.h
lib/inc/macro/: AGENTS.md  macro.h
lib/inc/memory/: AGENTS.md  HybridObjectPool.hpp  LockFreeObjectPool.hpp  ThreadLocalPool.hpp
lib/inc/metrics/: AtomicClientMetrics.h  AtomicServerMetrics.h  ClientMetricsSnapshot.h  ClientMetricsWriter.h  IClientMetrics.h  IServerMetrics.h  NoopClientMetrics.h  NullServerMetrics.h  RunManifest.h  ServerMetricsCallbacks.h  ServerMetricsSnapshot.h  ServerMetricsWriter.h  TimingWindow.h
lib/inc/scope/: AGENTS.md  Defer.h  Defer.hpp  DeferContext.hpp  DeferredItemHolder.hpp
lib/inc/thread/: LogicThread.cpp  LogicThread.h  thread.h
lib/inc/time/: time.h
lib/runTime/: Config.h  Config.hpp  StringUtils.h  StringUtils.hpp  TomlEntry.h  TomlEntry.hpp  TomlParser.h  TomlParser.hpp
lib/src/: AGENTS.md
lib/src/logger/: AGENTS.md  ConsoleLogger.cpp  TextLogger.cpp
lib/src/metrics/: AtomicClientMetrics.cpp  AtomicServerMetrics.cpp  ClientMetricsConfig.cpp  ClientMetricsWriter.cpp  RunManifest.cpp  ServerMetricsCallbacks.cpp  ServerMetricsConfig.cpp  ServerMetricsSupport.cpp  ServerMetricsSupport.h  ServerMetricsWriter.cpp
lib/src/scope/: AGENTS.md  Defer.cpp
lib/src/thread/: thread.cpp
network/: AGENTS.md  AcceptContext.h  Acceptor.cpp  Acceptor.h  AsyncAcceptor.cpp  AsyncAcceptor.h  AsyncSocket.cpp  AsyncSocket.h  Client.cpp  Client.h  CompletionTarget.hpp  ConfigEmbedded.h  Const.h  EIoType.h  IAsyncAcceptor.h  IServerHandler.h  ISocket.h  IoCompletionPort.cpp  IoCompletionPort.h  IocpAcceptor.cpp  IocpAcceptor.h  IocpIoMultiplexer.cpp  IocpIoMultiplexer.h  NetworkCfg.h  NetworkTransport.hpp  NetworkUtil.hpp  OverlappedEx.h  OverlappedExt.h  PacketStream.cpp  PacketStream.h  RuntimeCfg.h  ServerCore.cpp  ServerCore.h  ServerLifecycle.cpp  ServerLifecycle.h  SocketHelper.cpp  SocketHelper.h  SocketOptionBuilder.cpp  SocketOptionBuilder.h  TcpClientSocket.cpp  (+14 more)
network/inc/: AGENTS.md  ISession.h  platform.h
network/inc/acceptor/: AGENTS.md  AcceptContext.h  IocpAcceptor.h
network/inc/client/: AGENTS.md  FrameBuffer.h  PacketStream.h  TcpClientSocket.h  WsaSession.h
network/inc/config/: AGENTS.md  ConfigEmbedded.h  Const.h  NetworkCfg.h
network/src/: AGENTS.md  ServerLifecycle.cpp
prompt-history/codex/: 2026-03-20-flatbuffers-factory.md
protocol/: AGENTS.md  PacketFactory.h  flatbuffers.natvis  protocol.cpp  protocol.vcxproj  protocol.vcxproj.filters
protocol/flatbuf/: AGENTS.md  flatbuffer-gen-analysis.md
scripts/: AGENTS.md  embed_config.ps1  gen_flatbuffers.ps1  gen_flatbuffers.sh  parse_compile_cfg.ps1  parse_compile_cfg.sh  parse_network_cfg.ps1  parse_network_cfg.sh
(+163 files in other folders)
